feat: add mailer & websocket
