# src/routes/auth.js
@@ -1,7 +1,23 @@
+const path = require("path");
 const express = require("express");
-const auth = require("../controllers/auth");
 const router = express.Router();
 
-router.post("/login", auth.login);
+const Auth = require("../controllers/auth");
+const AuthMiddleware = require("../middlewares/auth");
+
+router.post("/login", Auth.login);
+router.post("/forgot-password", Auth.forgotPassword);
+router.post("/reset-password", Auth.resetPassword);
+
+router.get("/reset-password", (req, res) => {
+  // eslint-disable-next-line no-undef
+  res.sendFile(path.join(__dirname, "../templates/resetPassword.html"));
+});
+
+router.post(
+  "/change-password",
+  AuthMiddleware.changePassword,
+  Auth.changePassword
+);
 
 module.exports = router;
